--- a/index.html
+++ b/index.html
@@ -56,3 +56,35 @@
     </main>
 </body>
 </html>
+<div class="play">
+    <div class="play-content">
+    <h3 class="play-tittle">PLAY LIKE THE</h2>
+        <h1 class="play-head">
+            G.O.A.T.
+        </h1>
+    <p class="play-option play-option discription-color"> 
+        <span>
+            <img class="img-goat" src="images/icons/Frame.jpg"  alt="">
+        </span>
+        1-Click instant play</p>
+    <p class="play-option discription-color"> 
+        <span>
+            <img class="img-goat" src="images/icons/Frame (1).jpg" alt="">
+        </span>
+            No Download</p>
+    <p class="play-option discription-color">
+        <span>
+            <img src="images/icons/Frame (2).jpg" alt="">
+        </span>
+         1000s of supported online games</p>
+    <section class="play-btn">
+        <button class="btn sign-in">Sign In</button>
+        <button class="btn go-rogue">Go Rogue</button>
+    </section>
+
+    </div>
+    <div class="play-image">
+            <img src="images/Group 18.png" alt="">
+    </div>
+
+</div>
