--- a/index.html
+++ b/index.html
@@ -82,15 +82,12 @@
         <div class="img-section3">
             <img src="images/Rectangle 7.png" alt="">
             <p>Breaking game records like OG</p>
-            <div class="this is hover">
-             <img src="images/icons/Frame.jpg" alt="">
+            <div class="section3">
+               <img src="images/icons/Frame.jpg" alt="">
              <h4>Watch Now</h4>
             </div>
-            <div>
-                
-            </div>
+            
         </div>
-
 
         <div class="img-section">
             <img src="images/Rectangle 5.png" alt="">
