--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         </div>
        <div class="img-section-head">
         
-        <div class="img-section">
+        <div  class="img-section">
             <img src="images/Rectangle 4.png" alt="">
             <p>No Download. No Installs. Play games Instantly on Gamer.</p>
         </div>
-        <div class="img-section">
+        <div class="img-section2">
             <img src="images/Rectangle 6.png" alt="">
             <p>Did you score? #unblockedgames #school</p>
         </div>
@@ -83,7 +83,7 @@
             <img src="images/Rectangle 7.png" alt="">
             <p>Breaking game records like OG</p>
             <div class="section3">
-               <img src="images/icons/Frame.jpg" alt="">
+               <img class="img-watch-now" src="images/icons/frame.png" alt="">
              <h4>Watch Now</h4>
             </div>
             
