--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
               
             </div>
             <div class="img-1-1">
-                   <img src="images/Group 18.png" alt="">
+                   <img class="implay" src="images/Group 18.png" alt="">
             </div>
        </div>
        <div class="we-are-gamer">
            <div>
-               <img src="images/pngwing 4.png" alt="">
+               <img class="gamer-main-img" src="images/pngwing 4.png" alt="">
            </div>
            <div class="gamer-text">
               <h2 class="gamer-h2">WE ARE GAMERS</h2>
-              <P class="gamer-p">An international digital games and entertainment <br>company. We develop, publish and distribute multiplayer <br>mobile games. We reach over 400 million players each <br> month and our audience keeps growing.</P>
+              <P class="gamer-p">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each <br> month and our audience keeps growing.</P>
               <input class="signin" type="button" value="know More">
               <br>
               <blockquote class="gamer-bq">
@@ -70,17 +70,17 @@
        <div class="img-section-head">
         
         <div  class="img-section">
-            <img src="images/Rectangle 4.png" alt="">
+            <img class="im1" src="images/Rectangle 4.png" alt="">
             <p>No Download. No Installs. Play games Instantly on Gamer.</p>
         </div>
         <div class="img-section2">
-            <img src="images/Rectangle 6.png" alt="">
+            <img class="im1"  src="images/Rectangle 6.png" alt="">
             <p>Did you score? #unblockedgames #school</p>
         </div>
 
 
         <div class="img-section3">
-            <img src="images/Rectangle 7.png" alt="">
+            <img class="im1"  src="images/Rectangle 7.png" alt="">
             <p>Breaking game records like OG</p>
             <div class="section3">
                <img class="img-watch-now" src="images/icons/frame.png" alt="">
@@ -90,7 +90,7 @@
         </div>
 
         <div class="img-section">
-            <img src="images/Rectangle 5.png" alt="">
+            <img  class="im1" src="images/Rectangle 5.png" alt="">
             <p>
                 Busted gaming on school laptop, but you are still lit.
             </p>
@@ -105,7 +105,7 @@
             </h1>
             <p>Play games online for free <br>without downloading. Just click the<br> Play button and play instantly in your browser.</p>
          </div>
-         <div>
+         <div class="pinstantly-imges">
             <img  src="images/Rectangle 55.png" alt="" class="play-img1">
             <img src="images/Rectangle 66.png"  alt="" class="play-img2">
          </div>
